Fix invisible register text on chrome

--- a/css/index.css
+++ b/css/index.css
@@ -85,8 +85,8 @@
 #register {
     text-align: center;
     max-width: initial;
-    padding-top: 10rem;
-    padding-bottom: 10rem;
+    padding-top: 5rem;
+    padding-bottom: 5rem;
 }
 #register button {
     font-size: var(--text-med);
